# workshop_organizacao_de_codigo

./: Dockerfile  README.md  main.py  pyproject.toml
.github/workflows/: continuous_integration.yml
src/data/input/: products_01.csv  products_02.csv
src/pipeline/: extract_.py
src/testes/: test_pipeline.py
