[tool.poetry]
name = "workshop-organizacao"
version = "0.1.0"
description = ""
authors = ["FernandoMS4 <fernando381046@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
pandas = "^2.2.3"
pytest = "^8.3.4"
isort = "^5.13.2"
blue = "^0.9.1"
taskipy = "^1.14.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
known_third_party = []

[tool.taskipy.tasks]
format = "isort . && black ."
teste = "poetry run python src/pipeline/extract_.py"